--- a/angular7-frontend/src/app/employee-add/employee-add.component.html
+++ b/angular7-frontend/src/app/employee-add/employee-add.component.html
@@ -12,21 +12,21 @@
         <input matInput placeholder="First Name" formControlName="firstName"
                [errorStateMatcher]="matcher">
         <mat-error>
-          <span *ngIf="!employeeForm.get('firstName').valid && employeeForm.get('firstName').touched">Please enter first name</span>
+          <span *ngIf="!employeeForm.get('firstName').valid && employeeForm.get('firstName').touched">First Name</span>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Last Name" formControlName="lastName"
                [errorStateMatcher]="matcher">
         <mat-error>
-          <span *ngIf="!employeeForm.get('lastName').valid && employeeForm.get('lastName').touched">Please enter last name</span>
+          <span *ngIf="!employeeForm.get('lastName').valid && employeeForm.get('lastName').touched">Last Name</span>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Email" formControlName="email"
                [errorStateMatcher]="matcher">
         <mat-error>
-          <span *ngIf="!employeeForm.get('email').valid && employeeForm.get('email').touched">Please enter email</span>
+          <span *ngIf="!employeeForm.get('email').valid && employeeForm.get('email').touched">Email</span>
         </mat-error>
       </mat-form-field>
       <div class="button-row">
