--- a/angular7-frontend/src/app/employees/employees.component.html
+++ b/angular7-frontend/src/app/employees/employees.component.html
@@ -11,7 +11,7 @@
            matSort matSortActive="lastName" matSortDisableClear matSortDirection="asc">
 
       <!-- Employee First Name Column -->
-      <ng-container matColumnDef="firstNAme">
+      <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef>First</th>
         <td mat-cell *matCellDef="let row">{{row.firstName}}</td>
       </ng-container>
@@ -19,7 +19,7 @@
       <!-- Employee Last Name Column -->
       <ng-container matColumnDef="lastName">
         <th mat-header-cell *matHeaderCellDef>Last</th>
-        <td mat-cell *matCellDef="let row">$ {{row.lastName}}</td>
+        <td mat-cell *matCellDef="let row">{{row.lastName}}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
